--- a/client/index.html
+++ b/client/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>winner</title>
+    <link href="https://fonts.googleapis.com/css?family=Maitree" rel="stylesheet">
+    <title>WinnerEstate</title>
   </head>
   <body>
     <div id="app"></div>
